--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,7 +22,7 @@
   position: relative;
   resize: none;
   font-size: 1.1rem;
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 1rem;
   width: 75vw;
   border-radius: 0.5rem;
   border: 1px solid #d9d9e3;
